--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 asgiref==3.4.1
 bcrypt==3.1.7
 blinker==1.4
+boto3==1.19.3
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
@@ -16,6 +17,7 @@ django-datetimepicker==3.14
 django-decouple==2.1
 django-friends==0.1.5
 django-heroku==0.3.1
+django-storages==1.12.2
 entrypoints==0.3
 fasteners==0.14.1
 filelock==3.0.12
